fix(generic-block): fix root block overflow

--- a/packages/lumx-core/src/scss/components/generic-block/_index.scss
+++ b/packages/lumx-core/src/scss/components/generic-block/_index.scss
@@ -3,9 +3,6 @@
    ========================================================================== */
 
 .#{$lumx-base-prefix}-generic-block {
-    overflow: clip;
-    max-width: 100%;
-
     &__content {
         // Prevent blocks in content from overflowing
         overflow: clip;
